tests/paczka2/big_fuzzy/99362199.err
Error in line 3: YE7Ch S134 73,5
Error in line 5: YE7Ch S82 13,3
Error in line 24: A503 S134 53,36
Error in line 28: 0ngwG A503 165,6
Error in line 48: ?A{03
Error in line 52: jx4FdrAXUk S82 95,4
Error in line 63: A503 A503 31,07
Error in line 77: YE7Ch S134 891,7
Error in line 75: jx4FdrAXUk A855 11,0
Error in line 82: jx4FdrAXUk S134 29,5
Error in line 78: 5Sr A855 30,4
Error in line 97: 0ngwG S134 31,5
Error in line 101: 0ngwG A855 7,4
Error in line 116: jx4FdrAXUk A503 5,3
Error in line 121: YE7Ch A503 393,56
Error in line 118: jx4FdrAXUk S134 48,3
Error in line 129: A503 A855 30,05
Error in line 106: 0ngwG S82 3,5
Error in line 147: 0Q9UWLh S82 95,0
Error in line 130: jx4FdrAXUk A503 266,0
Error in line 152: YE7Ch S134 157,7
Error in line 160: 0ngwG S82 25,5
Error in line 158: YE7Ch A503 31,6
Error in line 170: 5Sr A503 456,9
Error in line 171: A503 S82 9,6
Error in line 181: PabWLS S134 1,0
Error in line 162: 0Q9UWLh S134 211,4
Error in line 216: YE7Ch S134 85,1
Error in line 210: A503 S134 120,7
Error in line 225: 0ngwG S134 34,2
Error in line 231: jx4FdrAXUk S134 8,6
Error in line 223: YE7Ch S82 87,9
Error in line 235: 5Sr A503 32,5
Error in line 236: YE7Ch A503 7,6
Error in line 247: PabWLS A855 52,7
